--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -53,7 +53,7 @@
                 <!--表格查询结果区-->
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
-                        <el-table-column prop="voteMeetingId" width="160" label="所属会议详情编号"></el-table-column>
+                        <el-table-column prop="voteMeetingId" width="160" label="所属会议编号"></el-table-column>
                         <el-table-column prop="voteTitle" label="投票名称"></el-table-column>
                         <el-table-column prop="voteType" width="110" label="类型"></el-table-column>
                         <el-table-column prop="voteCrtTime" width="180" label="创建时间"></el-table-column>
