--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -16,7 +16,7 @@
                 <div class="cv_content_square">
                     <el-form :model="searchForm" status-icon class="demo-ruleForm" style="width: 100%"  @submit.native.prevent>
                         <el-row class="el-row-h60">
-                            <el-col :span="7">
+                            <el-col :span="8">
                                 <el-form-item label="所属会议编号" label-width="40%" style="margin:0;">
                                     <el-input
                                     clearable
@@ -25,7 +25,17 @@
                                     auto-complete="off"></el-input>
                                 </el-form-item>
                             </el-col>
-                            <el-col :span=11 :offset="1">
+                            <el-col :span="12">
+                                <el-form-item label="投票标题" label-width="25%" style="margin:0;">
+                                    <el-input
+                                    clearable
+                                    v-model="searchForm.voteTitle"
+                                    placeholder="输入投票标题"
+                                    type="text"
+                                    auto-complete="off"></el-input>
+                                </el-form-item>
+                            </el-col>
+                            <!-- <el-col :span=11 :offset="1">
                                 <el-form-item label="创建日期" label-width="20%"  style="margin:0; width: 100%">
                                         <el-date-picker
                                         v-model="timeRange"
@@ -37,16 +47,16 @@
                                         end-placeholder="结束日期">
                                       </el-date-picker>
                                 </el-form-item>
-                            </el-col>
-                            <el-col :span="2" :offset="1" class="el-row-h40">
-                                <el-button type="primary" style="width:100%" @click="startSearch(0)">搜索</el-button>
+                            </el-col> -->
+                            <el-col :span="3" :offset="1" class="el-row-h40">
+                                <el-button icon="el-icon-search" type="primary" style="width:100%" @click="startSearch(0)">搜索</el-button>
                             </el-col>
                         </el-row>
                     </el-form>
                 </div>
                 <!--功能按钮区-->
                 <el-row class="el-row-h50">
-                    <el-col :span="3">
+                    <el-col :span="4">
                         <el-button type="primary" type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditVote(0)">新建投票</el-button>
                     </el-col>
                 </el-row>
