--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -51,7 +51,13 @@
                 <!--表格查询结果区-->
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
-                        <el-table-column prop="meetingAgendaMeetingId" width="110" label="所属会议编号" ></el-table-column>
+                        <el-table-column prop="meetingAgendaId" label="日程编号" ></el-table-column>
+                        <el-table-column prop="meetingAgendaMeetingId" width="110" label="所属会议编号" >
+                            <template slot-scope="scope">
+                                <div v-if="scope.row.meetingAgendaMeetingId == '-1'"></div>
+                                <div v-else v-text="scope.row.meetingAgendaMeetingId"></div>
+                            </template>
+                        </el-table-column>
                         <el-table-column prop="meetingAgendaTitle" label="会议日程标题" ></el-table-column>
                         <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
                         <el-table-column prop="modUserName" label="修改人" width="90"></el-table-column>
