--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
@@ -50,7 +50,13 @@
                 <!--表格查询结果区-->
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
-                        <el-table-column prop="diagramMeetingId" width="160" label="所属会议编号"></el-table-column>
+                        <el-table-column prop="diagramId" width="160" label="会议组图编号"></el-table-column>
+                        <el-table-column prop="diagramMeetingId" width="160" label="所属会议编号">
+                            <template slot-scope="scope">
+                                <div v-if="scope.row.diagramMeetingId == '-1'"></div>
+                                <div v-else v-text="scope.row.diagramMeetingId"></div>
+                            </template>
+                        </el-table-column>
                         <el-table-column prop="diagramTitle"  label="组图标题"></el-table-column>
                         <el-table-column prop="diagramCrtTime" width="200" label="创建时间"></el-table-column>
                         <el-table-column prop="userName" label="创建人" width="180"></el-table-column>
