--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/vote_list.html
@@ -63,7 +63,13 @@
                 <!--表格查询结果区-->
                 <div class="cv_content_square">
                     <el-table :data="tableData" style="width: 100%; margin: 10px auto;" stripe>
-                        <el-table-column prop="voteMeetingId" width="160" label="所属会议编号"></el-table-column>
+                        <el-table-column prop="voteId" width="160" label="投票编号"></el-table-column>
+                        <el-table-column prop="voteMeetingId" width="160" label="所属会议编号">
+                            <template slot-scope="scope">
+                                <div v-if="scope.row.voteMeetingId == '-1'"></div>
+                                <div v-else v-text="scope.row.voteMeetingId"></div>
+                            </template>
+                        </el-table-column>
                         <el-table-column prop="voteTitle" label="投票名称"></el-table-column>
                         <el-table-column prop="voteType" width="110" label="类型"></el-table-column>
                         <el-table-column prop="voteCrtTime" width="180" label="创建时间"></el-table-column>
