--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_list.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
-<title>所有会议</title>
+<title>会议页面列表</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">所有会议</div>
+    <div class="cvpage_title_common">会议页面列表</div>
     <div id="meeting_list" class="cv_page_content">
         <!--列表搜索区-->
         <div class="cv_content_square">
