--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -66,7 +66,7 @@
                         <el-table-column label="操作" width="100" fixed="right">
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditCalendar(1,scope.row)">修改</el-button>
-                                <el-button type="text" size="small" @click="deleteThisCalendar(scope.row)">删除</el-button>
+                                <el-button v-if="scope.row.meetingAgendaMeetingId == '-1' || scope.row.meetingAgendaMeetingId == ''" type="text" size="small" @click="deleteThisCalendar(scope.row)">删除</el-button>
                             </template>
                         </el-table-column>
                     </el-table>
