--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest.html
@@ -63,7 +63,7 @@
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
-                            <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
+                            <el-button v-if="scope.row.meetingGuestMeetingId == '-1' || scope.row.meetingGuestMeetingId == ''"  type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
