--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_hdpicture.html
@@ -64,7 +64,7 @@
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditPic(1,scope.row)">属性</el-button>
                                 <el-button type="text" size="small" @click="EditDetailList(scope.row)">编辑</el-button>
-                                <el-button type="text" size="small" @click="deleteThisDiagram(scope.row)">删除</el-button>
+                                <el-button v-if="scope.row.diagramMeetingId == '-1' || scope.row.diagramMeetingId == ''" type="text" size="small" @click="deleteThisDiagram(scope.row)">删除</el-button>
                             </template>
                         </el-table-column>
                     </el-table>
