--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_interaction.html
@@ -64,7 +64,7 @@
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditPic(1,scope.row)">属性</el-button>
                                 <el-button type="text" size="small" @click="EditDetailList(scope.row)">编辑</el-button>
-                                <el-button type="text" size="small" @click="deleteThisInteraction(scope.row)">删除</el-button>
+                                <el-button v-if="scope.row.interactionMeetingId == '-1' || scope.row.interactionMeetingId == ''" type="text" size="small" @click="deleteThisInteraction(scope.row)">删除</el-button>
                             </template>
                         </el-table-column>
                     </el-table>
